Added header logo, and three header links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <header class="header">Header Logo
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </header>
+    <div class="top-main">
+        
+    </div>
 </body>
 </html>
