Finished basic HTML skeleton, began style.css with background color for header and first main section.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">Header Logo
-        <ul>
+        <ul class="header-list">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
     </header>
-    <div class="top-main">
-        
+    <div class="main">
+        <div class="top-main">
+            <h1>This website is awesome.</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast</p>
+            <img src="" alt="this is a placeholder for an image">
+        </div>
+        <div class="first-main">
+            Some Random Information.
+            <img src="" alt="first image" class="first-image">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="" alt="second image" class="second-image">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="" alt="third image" class="third-image">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="" alt="fourth image" class="fourth-image">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="second-main">
+            <blockquote>This is an inspiring quote, or a testamonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. 
+                Who knows? All I know is it looks nice.</blockquote>
+            <p>- Thor, God of Thunder</p>    
+        </div>
+        <div class="third-main">
+            Call to action! It's Time!
+            <p class="subtext-third">
+                Sign up for our product by clicking that button right over there!
+            </p>
+            <button class="Sign-Up">Sign up!</button>
+        </div>
     </div>
-</body>
+    <footer>Copyright The Odin Projekt</footer>
+    </body>
 </html>
