--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">Header Logo
+    <header class="header"> 
+        <div class="logo-text">Header Logo</div>
         <ul class="header-list">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a>header link one</a></li>
+            <li><a>header link two</a></li>
+            <li><a>header link three</a></li>
         </ul>
     </header>
     <div class="main">
         <div class="top-main">
             <h1>This website is awesome.</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast</p>
+            <p class="subtext-first">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast</p>
             <img src="" alt="this is a placeholder for an image">
         </div>
         <div class="first-main">
