--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
             <img src="" alt="this is a placeholder for an image">
         </div>
         <div class="first-main">
-            Some Random Information.
+           <div class="random-title">
+               Some Random Information.
+            </div>
             <img src="" alt="first image" class="first-image">
-            <p>this is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             <img src="" alt="second image" class="second-image">
-            <p>this is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             <img src="" alt="third image" class="third-image">
-            <p>this is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             <img src="" alt="fourth image" class="fourth-image">
-            <p>this is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="second-main">
             <blockquote>This is an inspiring quote, or a testamonial from a customer. 
                 Maybe it's just filling up space, or maybe people will actually read it. 
                 Who knows? All I know is it looks nice.</blockquote>
-            <p>- Thor, God of Thunder</p>    
+                <p class="quote">- Thor, God of Thunder</p>    
         </div>
         <div class="third-main">
             Call to action! It's Time!
@@ -48,5 +50,5 @@
         </div>
     </div>
     <footer>Copyright The Odin Projekt</footer>
-    </body>
+</body>
 </html>
