Fixed footer class, added more containers

--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
             <button class="Sign-Up">Sign up!</button>
         </div>
     </div>
-    <footer>Copyright The Odin Projekt</footer>
+    <footer class="footer">Copyright The Odin Projekt</footer>
 </body>
 </html>
