--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             </div>
         </div>
         <div class="second-main">
-            <blockquote>This is an inspiring quote, or a testamonial from a customer. 
+            <blockquote class="quote-text">This is an inspiring quote, or a testamonial from a customer. 
                 Maybe it's just filling up space, or maybe people will actually read it. 
                 Who knows? All I know is it looks nice.</blockquote>
-                <p class="quote">- Thor, God of Thunder</p>    
+                <p class="quote-author">- Thor, God of Thunder</p>    
         </div>
         <div class="third-main">
             Call to action! It's Time!
