Added background color and margin to bottom section of page, more alignment added to quote section.

--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
                 <p class="quote-author">- Thor, God of Thunder</p>    
         </div>
         <div class="third-main">
-            Call to action! It's Time!
-            <p class="subtext-third">
-                Sign up for our product by clicking that button right over there!
-            </p>
-            <button class="Sign-Up">Sign up!</button>
+            <div class="third-text">
+                Call to action! It's Time!
+                <p class="subtext-third">
+                    Sign up for our product by clicking that button right over there!
+                </p>
+            </div>
+            <div class="bottom-buttom">
+                <button class="Sign-Up">Sign up!</button>
+            </div>
         </div>
     </div>
     <footer class="footer">Copyright The Odin Projekt</footer>
