Majority of content has been placed and styled, footer centered and minor adjustments to padding of elements.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     Sign up for our product by clicking that button right over there!
                 </p>
             </div>
-            <div class="bottom-buttom">
+            <div class="bottom-button">
                 <button class="Sign-Up">Sign up!</button>
             </div>
         </div>
