--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
             </div>
         </div>
     </div>
-    <footer class="footer">Copyright The Odin Projekt</footer>
+    <footer class="footer">Copyright The Odin Project</footer>
 </body>
 </html>
